passkit in partners page

--- a/app/views/web/ost/partners/_partner_companies.erb
+++ b/app/views/web/ost/partners/_partner_companies.erb
@@ -11,32 +11,25 @@
       on_hover_imgcolor: "classname",
       sprite_index: 30,
       has_exited: false,
-      description_html: "Unsplash is the world’s leading photography platform. Unsplash served more than 5.4 Billion photo views in January, up more than 300% from 12 months ago. Unsplash and OST are partnering to reinvent, decentralize, and democratize photography.",
-      location: "Montreal",
-      website: "https://unsplash.com/",
+      description_html: "PassKit provides businesses with the tools and infrastructure to create engaging programs that foster true loyalty. Thousands of business worldwide use PassKit to connect and engage with over 250 million people worldwide. PassKit’s customers include some of the best businesses across retail, hospitality, travel, insurance, F&B, telecommunications and financial services, including Best Western International, DFS, Swire, FWD Insurance, Now Health, AIS, Heathrow Airport, and Azul Airways.",
+      location: "Hongkong",
+      website: "https://passkit.com/",
       founders: [
         {
-          name: "Steph Liverani"
+          name: "Paul Tomes"
         },
         {
-          name: "Mikael Cho"
-        },
-        {
-          name: "Luke Chesser"
+          name: "Nick Murray"
         }
       ],
       social: [
         {
           name: "Twitter",
-          link: "https://twitter.com/unsplash"
-        },
-        {
-          name: "Medium",
-          link: "https://medium.com/unsplash"
+          link: "https://twitter.com/PassKit"
         },
         {
           name: "LinkedIn",
-          link: "https://www.linkedin.com/company/unsplash/"
+          link: "https://www.linkedin.com/company/passkit/"
         }
       ]
     },
