passkit in partners page

--- a/app/views/web/ost/partners/_partner_companies.erb
+++ b/app/views/web/ost/partners/_partner_companies.erb
@@ -7,7 +7,7 @@
         "loyalty"
       ],
       size: "large",
-      on_hover_bgcolor: "#AEE1E3",
+      on_hover_bgcolor: "#40C4FF",
       on_hover_imgcolor: "classname",
       sprite_index: 30,
       has_exited: false,
