team page update

--- a/app/views/web/ost/team/_team.erb
+++ b/app/views/web/ost/team/_team.erb
@@ -63,13 +63,6 @@
                               description: 'Francesco "Frankie" Pacella is a Product and Marketing Manager with 5 years of experience. He developed and scaled a number of projects and companies on the tech scene across Europe and Asia focusing on growth, engagement, monetization, and analytics.'
                             },
                             {
-                                name: "Adeola Ogunwole",
-                                title: "Vice President of Marketing",
-                                image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Adeola-Ogunwole.png",
-                                linkedIn: 'https://www.linkedin.com/in/adeolaogunwole/',
-                                description: "Adeola Ogunwole is a marketing executive, former founder and math nerd obsessed with answering “what”, “why” and “how” through data-driven narratives rooted in customer insights. She brings over 15 years experience leading global marketing teams. Her previous roles include senior marketing and strategy roles at Hult International Business School, Apollo Education, Quinstreet, and General Mills."
-                            },
-                            {
                                 name: "Jason Banks",
                                 title: "Lead Blockchain Engineer",
                                 image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Jason-Banks.png",
@@ -428,6 +421,13 @@
                               description: "As an ex-engineer and ex-investment banker, Jean is passionate about the latest trends in Fintech. He joins OST with over 14 years of professional experience and will lead Business Development efforts in Asia, building partnerships and helping companies unlock their growth potential. Jean holds a MS in Electrical Engineering from Caltech, and a MBA from the University of Chicago."
                             },
                             {
+                              name: "Adeola Ogunwole",
+                              title: "Senior Marketing Advisor",
+                              image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Adeola-Ogunwole.png",
+                              linkedIn: 'https://www.linkedin.com/in/adeolaogunwole/',
+                              description: "Adeola Ogunwole is a marketing executive, former founder and math nerd obsessed with answering “what”, “why” and “how” through data-driven narratives rooted in customer insights. She brings over 15 years experience leading global marketing teams. Her previous roles include senior marketing and strategy roles at Hult International Business School, Apollo Education, Quinstreet, and General Mills."
+                            },
+                            {
                               name: "Martin Schenck",
                               title: "Senior Blockchain Engineer",
                               image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Martin.png",
@@ -447,7 +447,16 @@
                               image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Preshita-Shirke.png",
                               linkedIn: 'https://www.linkedin.com/in/preshita-shirke-1109a0aa/',
                               description: "A computer science engineering graduate from VJTI, Mumbai, Preshita has extensive 3 year working experience in frontend technologies. When not following her passion of learning and exploring new technologies she spends her time cooking and travelling."
-                            }
+                            },
+                            {
+                              name: "Jose Mota",
+                              title: "Marketing Manager & Host of OST LIVE",
+                              image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Jose-Mota.png",
+                              linkedIn: 'https://www.linkedin.com/in/josemotaq/',
+                              twitter: "https://twitter.com/JosemotaQ",
+                              medium: "https://medium.com/@JosemotaQ",
+                              description: 'Jose Mota is a driven marketer and podcast creative from Southern California. He earned his BA in Business Administration from California State University, Fullerton. Jose was previously the host of Daily Crypto, a cryptocurrency world news podcast with over 85k monthly downloads. He now specializes in podcast programming and growth marketing, generating creative content for OST LIVE.'
+                            },
                             ];
 
             %>
