--- a/app/views/web/ost/index/_home_carousel.erb
+++ b/app/views/web/ost/index/_home_carousel.erb
@@ -1,4 +1,5 @@
 <section class="container-fluid bg-image container-carousel">
+  <%=CGI.unescapeHTML("&lt;a href='http://www.google.com'&gt;<strong>Cool,</strong> It's working &lt;/a&gt;").html_safe  %>
   <div class="row">
     <div class="container">
       <h1 class="pl-2">
