--- a/app/views/web/ost/index/_uber_banner.erb
+++ b/app/views/web/ost/index/_uber_banner.erb
@@ -16,8 +16,6 @@
         </switch>
       </svg>
       <%= CGI.unescapeHTML(banner_html).html_safe %>
-
-      <!--<a href="https://medium.com/ostdotcom/ost-project-roadmap-2017-2021-scaling-blockchain-economies-to-billions-of-users-7754f58112a6" target="_blank" class="align-middle" title="OST Roadmap 2017 - 2021">OST Roadmap 2017 - 2021: Scaling Blockchain Economies to Billions of Users. Learn More.</a>-->
     </div>
   </div>
 </div>
@@ -31,7 +29,7 @@
         </switch>
       </svg>
 
-      <a href="https://medium.com/ostdotcom/ost-project-roadmap-2017-2021-scaling-blockchain-economies-to-billions-of-users-7754f58112a6" target="_blank" class="align-middle" title="OST Roadmap 2017 - 2021">1234 OST Roadmap 2017 - 2021: Scaling Blockchain Economies to Billions of Users. Learn More.</a>
+      <%= CGI.unescapeHTML(banner_html).html_safe %>
     </div>
   </div>
 </div>
