--- a/app/views/web/ost/index/_home_carousel.erb
+++ b/app/views/web/ost/index/_home_carousel.erb
@@ -18,7 +18,7 @@
           <div class="w-100 one-el-wrapper">
             <div class="content-wrapper">
                 <% if news[0]['news_list_article_link']%>
-                  <a href=<%= news[0]['news_list_article_link'] %> target="_blank" title= <%=news[0]['news_list_title'] %>>
+                  <a href=<%= news[0]['news_list_article_link'] %> target="_blank" title="<%=raw(news[0]['news_list_title']) %>" >
                     <%= render :partial => "/web/ost/index/home_carousel_content" ,locals: {item: news[0]} %>
                   </a>
                 <%else %>
@@ -38,7 +38,7 @@
               <div class="content-wrapper">
 
                   <%if news[index]['news_list_article_link'] %>
-                    <a href=<%= raw(news[index]['news_list_article_link']) %> target="_blank" title=<%=raw(news[index]['news_list_title']) %>>
+                    <a href= "<%= raw(news[index]['news_list_article_link']) %>" target="_blank" title="<%=raw(news[index]['news_list_title']) %>">
                       <%= render :partial => "/web/ost/index/home_carousel_content" ,locals: {item: news[index]} %>
                     </a>
                   <%else%>
@@ -47,7 +47,7 @@
                   <%if news[index+1].present? %>
                     <% index += 1 %>
                     <%if news[index]['news_list_article_link'] %>
-                      <a href=<%= raw(news[index]['news_list_article_link']) %> target="_blank" title=<%=raw(news[index]['news_list_title']) %>>
+                      <a href= "<%= raw(news[index]['news_list_article_link']) %>" target="_blank" title="<%=raw(news[index]['news_list_title']) %>">
                         <%= render :partial => "/web/ost/index/home_carousel_content" ,locals: {item: news[index]} %>
                       </a>
                     <%else%>
@@ -63,3 +63,11 @@
     </div>
   </div>
 </section>
+
+<% content_for :end_js do %>
+  <script type="text/javascript">
+    (function () {
+      ost.carousel.home.initCarousel();
+    })()
+  </script>
+<%end%>
