--- a/app/views/shared/web/common/_navbarsubmenu.erb
+++ b/app/views/shared/web/common/_navbarsubmenu.erb
@@ -8,7 +8,7 @@
           </switch>
         </svg>
       </a>
-      <label for="tm" id="toggle-menu" class="mb-0 ml-auto ml-md-0">
+      <label for="tm" id="toggle-menu" class="mb-0 ml-auto ml-md-0 align-self-start">
         <span class="toggle-menu"></span>
       </label>
       <input type="checkbox" id="tm">
