Ost News title with SVG

--- a/app/assets/stylesheets/web/ost/index/HomeCarousel.scss
+++ b/app/assets/stylesheets/web/ost/index/HomeCarousel.scss
@@ -8,6 +8,10 @@
     width: 75px;
     height: 40px;
   }
+  .ost-news-logo{
+    width: 186px;
+    height: 39px;
+  }
   position: relative;
   &.bg-image {
     background-image: url('https://dxwfxs8b4lg24.cloudfront.net/ost-kit/images/ost-bg-cloud-illustration.png');
