--- a/app/views/shared/web/common/_navbarsubmenu.erb
+++ b/app/views/shared/web/common/_navbarsubmenu.erb
@@ -8,7 +8,7 @@
           </switch>
         </svg>
       </a>
-      <label for="tm" id="toggle-menu" class="mb-0 ml-auto ml-md-0 align-self-start navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+      <label for="tm" id="toggle-menu" class="mb-0 ml-auto ml-md-0 align-self-start navbar-toggler" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
         <span class="toggle-menu"></span>
       </label>
       <input type="checkbox" id="tm">
@@ -16,7 +16,7 @@
 
         <li><a href="javascript:void(0)" class="main-nav-item">Products
           <span class="drop-icon"></span>
-          <label title="Toggle Drop-down" class="drop-icon navbar-toggler" for="products" type="button" data-toggle="collapse" data-target="#navbarToggler2" aria-controls="navbarToggler2" aria-expanded="false" aria-label="Toggle navigation"></label>
+          <label title="Toggle Drop-down" class="drop-icon navbar-toggler" for="products" data-toggle="collapse" data-target="#navbarToggler2" aria-controls="navbarToggler2" aria-expanded="false" aria-label="Toggle navigation"></label>
         </a>
           <input type="checkbox" id="products">
           <ul class="sub-menu arrow-icon-top list-unstyled pt-0 pt-md-3 px-1 mx-2 mx-md-0 collapse" id="navbarToggler2">
@@ -43,7 +43,7 @@
 
         <li><a href="javascript:void(0)" class="main-nav-item">Developers
           <span class="drop-icon"></span>
-          <label title="Toggle Drop-down" class="drop-icon navbar-toggler" for="developers" type="button" data-toggle="collapse" data-target="#navbarToggler3" aria-controls="navbarToggler3" aria-expanded="false" aria-label="Toggle navigation"></label>
+          <label title="Toggle Drop-down" class="drop-icon navbar-toggler" for="developers" data-toggle="collapse" data-target="#navbarToggler3" aria-controls="navbarToggler3" aria-expanded="false" aria-label="Toggle navigation"></label>
         </a>
           <input type="checkbox" id="developers">
           <ul class="sub-menu arrow-icon-top list-unstyled pt-0 pt-md-3 px-1 mx-2 mx-md-0 collapse" id="navbarToggler3">
@@ -64,7 +64,7 @@
                 </switch>
               </svg><span class="pl-2">Dev Challenges</span>
               <span class="drop-icon drop-icon-right"></span>
-              <label title="Toggle Drop-down" class="drop-icon navbar-toggler" for="winners" type="button" data-toggle="collapse" data-target="#navbarToggler4" aria-controls="navbarToggler4" aria-expanded="false" aria-label="Toggle navigation"></label>
+              <label title="Toggle Drop-down" class="drop-icon drop-icon-right navbar-toggler" for="winners" data-toggle="collapse" data-target="#navbarToggler4" aria-controls="navbarToggler4" aria-expanded="false" aria-label="Toggle navigation"></label>
             </a>
               <input type="checkbox" id="winners">
               <ul class="sub-menu list-unstyled pt-2 px-3 px-md-1 m-0 collapse" id="navbarToggler4">
@@ -136,7 +136,7 @@
 
         <li><a href="javascript:void(0)" class="main-nav-item">Company
           <span class="drop-icon"></span>
-          <label title="Toggle Drop-down" class="drop-icon navbar-toggler" for="company" type="button" data-toggle="collapse" data-target="#navbarToggler5" aria-controls="navbarToggler5" aria-expanded="false" aria-label="Toggle navigation"></label>
+          <label title="Toggle Drop-down" class="drop-icon navbar-toggler" for="company" data-toggle="collapse" data-target="#navbarToggler5" aria-controls="navbarToggler5" aria-expanded="false" aria-label="Toggle navigation"></label>
         </a>
           <input type="checkbox" id="company">
           <ul class="sub-menu arrow-icon-top list-unstyled pt-0 pt-md-3 px-1 mx-2 mx-md-0 collapse" id="navbarToggler5">
