--- a/app/assets/stylesheets/web/common/_navbar.scss
+++ b/app/assets/stylesheets/web/common/_navbar.scss
@@ -345,7 +345,7 @@
     .sub-menu .sub-menu {
       z-index: 3001;
       top: -8px;
-      left: calc(100% + 0.25rem);
+      left: 203px;
     }
 
   }
